apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  selector:
    app.kubernetes.io/name: jellyfin
  ports:
    - port: 80
      targetPort: 8096
  type: ClusterIP
